k8s-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off" 
spec:
  ingressClassName: nginx 
  tls: 
    - hosts: 
      - k8s-dashboard.vuthytourn.shop
      secretName: k8s-dashboard-tls
  rules:
  - host: k8s-dashboard.vuthytourn.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
